project(qx-qml-treeview-quickplugin)

find_package(Qt5 REQUIRED COMPONENTS Core Qml Quick)

add_library(${PROJECT_NAME} SHARED)

file(GLOB_RECURSE HEADER_FILES *.h)
file(GLOB_RECURSE SOURCE_FILES *.cpp)
file(GLOB_RECURSE RESOURCE_FILES *.qrc)
file(GLOB_RECURSE IMAGE_FILES *.svg)
file(GLOB QMLDIR_FILES qmldir)
file(GLOB QMLTYPES_FILES *.qmltypes)

target_sources(${PROJECT_NAME} PRIVATE
	${HEADER_FILES}
	${SOURCE_FILES}
	${MOC_FILES}
	${RESOURCE_FILES}
	${JS_FILES}
	${IMAGE_FILES}
	${QMLDIR_FILES}
	${QMLTYPES_FILES}
)

set_target_properties(${PROJECT_NAME} PROPERTIES
	AUTOMOC ON
	AUTORCC ON

	CXX_EXTENSIONS OFF
	CXX_STANDARD 11
	CXX_STANDARD_REQUIRED ON
	CXX_VISIBILITY_PRESET hidden

	OUTPUT_NAME "qx-qml-treeview-quickplugin"

	ARCHIVE_OUTPUT_DIRECTORY "${OUTPUT_DIR}/${QX_LIB_DIR}"
	LIBRARY_OUTPUT_DIRECTORY "${OUTPUT_DIR}/${QX_LIB_DIR}"
	RUNTIME_OUTPUT_DIRECTORY "${OUTPUT_DIR}/${QX_BIN_DIR}"
)

if(MSVC)
	
	set_target_properties(${PROJECT_NAME} PROPERTIES
		DEBUG_POSTFIX "d"
	)

    target_compile_options(${PROJECT_NAME} PUBLIC "/utf-8")
endif()

add_definitions(-DQT_PLUGIN)

target_include_directories(${PROJECT_NAME} PUBLIC
	$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/>
	$<BUILD_INTERFACE:${CMAKE_CURRENT_BINARY_DIR}/>
)

target_link_libraries(${PROJECT_NAME} PRIVATE
		Qt5::Core
		Qt5::Qml
		Qt5::Quick		
	)

set(MODULE_DIR share/imports/Qx/treeview/)

install(TARGETS ${PROJECT_NAME}
	LIBRARY DESTINATION ${MODULE_DIR} COMPONENT ${PROJECT_NAME} 
	RUNTIME DESTINATION ${MODULE_DIR} COMPONENT ${PROJECT_NAME}
	ARCHIVE DESTINATION ${MODULE_DIR} COMPONENT ${PROJECT_NAME}-dev
	)

install(FILES ${QMLDIR_FILES}	DESTINATION ${MODULE_DIR} COMPONENT ${PROJECT_NAME})
install(FILES ${QMLTYPES_FILES}	DESTINATION ${MODULE_DIR} COMPONENT ${PROJECT_NAME}-dev)
